<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:gravity="center"
    android:padding="28dp" android:background="#090B14">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/app_name" android:textSize="34sp" android:textStyle="bold" android:textColor="#FFFFFF" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="10dp" android:text="@string/no_media" android:textSize="16sp" android:textColor="#AEB6D3" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/newProjectButton" android:layout_width="match_parent" android:layout_height="56dp"
        android:layout_marginTop="28dp" android:text="@string/new_project" android:textSize="16sp" />
</LinearLayout>